<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="CashDrawerAction">Open,KickOut,Close</string>
    <string name="CustomerDisplayAction">Open,BuzzerBeep,LEDPower,SetBackground,DisplayDefaultScreen,WritePicture,Close</string>
    <string name="FingerPrintAction">Open,GetFea,GetLastImage,Match,Cancel,Close</string>
    <string name="IDCardAction">IDCardAction</string>
    <string name="LEDAction">Open,TurnOn,TurnOff,GetStatus,Close</string>
    <string name="MSRCardAction">Open,Close</string>
    <string name="PINPadAction">Open,ShowText,ClearText,SetPINLength,UpdateUserKey,GetSerialNo,SelectKey,EncryptData,CalculateMAC,CalculatePINBlock,Close</string>
    <string name="PrinterAction">Open,QueryStatus,Write,Close</string>
    <string name="PrinterActionWIZARHAND_Q1">QueryVoltage,Open,QueryStatus,Write,Close</string>
    <string name="RFCardAction">Open,QueryInfo,Verify,Read,Write,Attach,Transmit,Detach,ReadMoneyValue,ReadMoneyValue2,WriteMoneyValue,Increment,Decrement,Transfer,Restore,Close</string>
    <string name="SerialPortAction">ExchangeMessage,ReadMessage,WriteMessage</string>
    <string name="SmartCardAction1">QueryMaxNumber,QueryPresence,Open,PowerOn,Transmit,PowerOff,Close</string>
    <string name="SmartCardAction2">QueryMaxNumber,QueryPresence,Open,PowerOn,Transmit,PowerOff,Close</string>
    <string name="WIZARHAND_Q1">IDCardAction</string>
    <string name="WIZARPOS">IDCard,RFCard,SmartCard1,SmartCard,MSRCard,PINPad,LED,SerialPort,CustomerDisplay,Printer,CashDrawer,FingerPrint</string>
    <string name="about">About</string>
    <string name="about_app_name">E POS 易收款</string>
    <string name="about_copyright">© Copyright 2016 New Zealand E Payments Ltd.</string>
    <string name="about_logout">LOGOUT</string>
    <string name="about_tel">Merchant Help Tel:</string>
    <string name="about_user">Merchant:</string>
    <string name="action_settings">Settings</string>
    <string name="allresult">All Result</string>
    <string name="alltime">All Time</string>
    <string name="app_name">E POS</string>
    <string name="back">Back</string>
    <string name="btn_begin_scanning">Begin Scanning</string>
    <string name="btn_end_scanning">End Scanning</string>
    <string name="cancel">Cancel</string>
    <string name="cancle">cancel</string>
    <string name="clearlog">ClearLog</string>
    <string name="datetime">Datetime/Amount</string>
    <string name="daypay">Day Orders</string>
    <string name="device_not_open">device is not opened</string>
    <string name="device_opened">device is opened</string>
    <string name="entermoney">Please Enter Money</string>
    <string name="enterpass">Please Enter Password</string>
    <string name="enterurl">Enter URL</string>
    <string name="getcancel">Pay Cancel</string>
    <string name="geterror">Pay Error</string>
    <string name="getsc">Get Success</string>
    <string name="getsuccess">Pay Success</string>
    <string name="jianjie">Test Profile</string>
    <string name="left_checkout">Check Out</string>
    <string name="left_menu">Menu</string>
    <string name="left_order">Order List</string>
    <string name="login_button">Login</string>
    <string name="login_copyright">Powered by E PAYMENTS LTD</string>
    <string name="login_logo">E POS LOGIN</string>
    <string name="login_name">Enter your name</string>
    <string name="login_password">Password</string>
    <string name="login_toast_not_null">Username or password cannot null</string>
    <string name="money_over">You entered amount over maxPayment.</string>
    <string name="monthpay">Month Orders</string>
    <string name="now">now</string>
    <string name="ok">OK</string>
    <string name="operation_failed">failed</string>
    <string name="operation_successful">successfully</string>
    <string name="operation_with_error">failed, error code =</string>
    <string name="order_cancel">Cancel</string>
    <string name="order_fail">Fail</string>
    <string name="order_success">Success</string>
    <string name="orderdetail">Order Detail</string>
    <string name="ordernumber">OrderNO.</string>
    <string name="pay_error">Pay Error</string>
    <string name="pay_success">Pay Success</string>
    <string name="pay_toast">Price can not be zero</string>
    <string name="payment">Payment Success!</string>
    <string name="paysc">Payment Success</string>
    <string name="paytitle">Payment</string>
    <string name="print">Print Ticket</string>
    <string name="print_back">BACK</string>
    <string name="printbills">Print Bills</string>
    <string name="reason">Reason</string>
    <string name="refund">Refund     </string>
    <string name="refundSuccess">RefundSuccess</string>
    <string name="refundfail">Refund Fail</string>
    <string name="retry">Check Order</string>
    <string name="rightmoney">Please Enter Right Money</string>
    <string name="sanjiao">▼</string>
    <string name="scan">Scan Code</string>
    <string name="server_error">Server is out of the question, please try again later.</string>
    <string name="state">State</string>
    <string name="testEnd">Testing End!</string>
    <string name="tip">Decribe    </string>
    <string name="today">TODAY</string>
    <string name="trade">TradeNO.</string>
    <string name="tryagain">Retry</string>
    <string name="txt_address">住 址：</string>
    <string name="txt_born">出 生：</string>
    <string name="txt_grantdept">签发机关：</string>
    <string name="txt_id_no">身份号码：</string>
    <string name="txt_name">姓 名：</string>
    <string name="txt_nation">民 族：</string>
    <string name="txt_sex">性 别：</string>
    <string name="txt_userlifebegin">有效期限(开始)：</string>
    <string name="txt_userlifeend">有效期限(结束)：</string>
    <string name="uninstall">Uninstall</string>
    <string name="version">Version: 0.0.1</string>
    <string name="wait_password">Pay Error,Wait for the user to enter a password,then Try.</string>
    <string name="wait_progress">Waiting…</string>
    <string name="wechat_pay">WECHAT PAY</string>
    <string name="week">WEEK</string>
    <string name="weekpay">Week Orders</string>
    <string name="welcome">Welcome to</string>
    <string name="xlistview_footer_hint_normal">LoadMore</string>
    <string name="xlistview_footer_hint_ready">LetGoLoadMore</string>
    <string name="xlistview_header_hint_loading">loading</string>
    <string name="xlistview_header_hint_normal">Refresh</string>
    <string name="xlistview_header_hint_ready">LetGoRefresh</string>
    <string name="xlistview_header_last_time">UpdateTime:</string>
    <string name="action_package_name">com.cloudpos.apidemo.action.</string>
    <string name="contact_location">Christchurch</string>
    <string name="contact_location1">138A Riccarton Road\n Christchurch\n New Zealand\n Tel: +64 3 377 5990\n Email:chch@e-payments.co.nz\n</string>
    <string name="contact_name">Auckland</string>
    <string name="contact_name1">Suite3, Level 6\n 300 Queen Street\n Auckland, NZ\n Tel: +64 9 336 8889\n Email:info@e-payments.co.nz\n</string>
    <string name="hello_world">Hello world!</string>
    <string name="jniinterface_package_name">com.unionpay.cloudpos.jniinterface.</string>
    <string name="returnback">return</string>
</resources>
