<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:paddingLeft="14dp" android:paddingTop="14dp" android:paddingRight="14dp" android:paddingBottom="14dp" android:layout_width="UNKNOWN_DATA_0x25801" android:layout_height="match_parent">
    <TextView android:textSize="28sp" android:id="@id/txt_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_name" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <TextView android:textSize="28sp" android:id="@id/txt_name_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/txt_name" android:layout_alignTop="@id/txt_name" />
    <TextView android:textSize="28sp" android:id="@id/txt_sex" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_sex" android:layout_below="@id/txt_name" />
    <TextView android:textSize="28sp" android:id="@id/txt_sex_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/txt_sex" android:layout_alignTop="@id/txt_sex" />
    <TextView android:textSize="28sp" android:id="@id/txt_nation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_nation" android:layout_below="@id/txt_sex" android:layout_alignLeft="@id/txt_sex" />
    <TextView android:textSize="28sp" android:id="@id/txt_nation_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/txt_nation" android:layout_alignTop="@id/txt_nation" />
    <TextView android:textSize="28sp" android:id="@id/txt_born" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_born" android:layout_below="@id/txt_nation" android:layout_alignLeft="@id/txt_nation" />
    <TextView android:textSize="28sp" android:id="@id/txt_born_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/txt_born" android:layout_alignTop="@id/txt_born" />
    <TextView android:textSize="28sp" android:id="@id/txt_address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_address" android:layout_below="@id/txt_born" android:layout_alignLeft="@id/txt_born" />
    <TextView android:textSize="28sp" android:id="@id/txt_address_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/txt_address" android:layout_alignTop="@id/txt_address" />
    <TextView android:textSize="28sp" android:id="@id/txt_grantdept" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_grantdept" android:layout_below="@id/txt_address" android:layout_alignLeft="@id/txt_userlifeend" />
    <TextView android:textSize="28sp" android:id="@id/txt_grantdept_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/txt_grantdept" android:layout_alignTop="@id/txt_grantdept" />
    <TextView android:textSize="28sp" android:id="@id/txt_id_no" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_id_no" android:layout_below="@id/txt_grantdept" />
    <TextView android:textSize="28sp" android:id="@id/txt_id_no_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/txt_id_no" android:layout_alignTop="@id/txt_id_no" />
    <TextView android:textSize="28sp" android:id="@id/txt_userlifebegin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_userlifebegin" android:layout_below="@id/txt_id_no" />
    <TextView android:textSize="28sp" android:id="@id/txt_userlifebegin_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/txt_userlifebegin" android:layout_alignTop="@id/txt_userlifebegin" />
    <TextView android:textSize="28sp" android:id="@id/txt_userlifeend" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_userlifeend" android:layout_below="@id/txt_userlifebegin" />
    <TextView android:textSize="28sp" android:id="@id/txt_userlifeend_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/txt_userlifeend" android:layout_alignTop="@id/txt_userlifeend" />
    <ImageView android:id="@id/img_picture" android:background="@drawable/photo" android:layout_width="UNKNOWN_DATA_0x8801" android:layout_height="UNKNOWN_DATA_0xa801" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <Button android:textSize="32sp" android:id="@id/btn_begin" android:layout_width="UNKNOWN_DATA_0xc801" android:layout_height="UNKNOWN_DATA_0x6401" android:text="@string/btn_begin_scanning" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
    <Button android:textSize="32sp" android:id="@id/btn_end" android:layout_width="UNKNOWN_DATA_0xc801" android:layout_height="UNKNOWN_DATA_0x6401" android:text="@string/btn_end_scanning" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>
