<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="match_parent"
    <RelativeLayout android:id="@+id/re_bottom" android:background="#16a085" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3c01" android:layout_alignParentBottom="true">
        <Button android:textColor="#ffffff" android:id="@+id/btn_logout" android:background="@drawable/logout_button" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="UNKNOWN_DATA_0x2801" android:text="@string/about_logout" android:layout_centerInParent="true" />
    </RelativeLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/re_bottom">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="22sp" android:textStyle="bold" android:textColor="#676767" android:id="@+id/tv_user" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/about_user" android:layout_centerHorizontal="true" />
            <TextView android:textSize="18sp" android:textColor="#676767" android:id="@+id/tv_tel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/about_tel" android:layout_below="@+id/tv_user" android:layout_centerHorizontal="true" />
            <ImageView android:id="@+id/iv_logo" android:layout_width="UNKNOWN_DATA_0x6401" android:layout_height="UNKNOWN_DATA_0x6401" android:layout_marginTop="20dp" android:src="@mipmap/icon" android:layout_below="@+id/tv_tel" android:layout_centerHorizontal="true" />
            <TextView android:textSize="40sp" android:textStyle="bold" android:textColor="#666666" android:id="@+id/tv_appname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/about_app_name" android:layout_below="@+id/iv_logo" android:layout_centerHorizontal="true" />
            <TextView android:textColor="#737373" android:id="@+id/tv_right" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/about_copyright" android:layout_below="@+id/tv_appname" android:layout_centerHorizontal="true" />
            <WebView android:id="@+id/webview" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/tv_right" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
