<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="#edeff1" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/iv_logo" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="UNKNOWN_DATA_0x7801" android:layout_marginTop="20dp" android:src="@mipmap/icon" android:layout_centerHorizontal="true" />
    <TextView android:textSize="30sp" android:textColor="#34495e" android:id="@+id/tv_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/login_logo" android:layout_below="@+id/iv_logo" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@+id/re_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="15dp" android:layout_marginRight="30dp" android:layout_below="@+id/tv_logo">
        <EditText android:id="@+id/login_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/login_name" android:singleLine="true" android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:src="@mipmap/username" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/re_psd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="15dp" android:layout_marginRight="30dp" android:layout_below="@+id/re_name">
        <EditText android:id="@+id/login_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/login_password" android:singleLine="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:src="@mipmap/password" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <Button android:textColor="#ffffff" android:id="@+id/login_button" android:background="#1abc9c" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2d01" android:layout_marginLeft="30dp" android:layout_marginTop="15dp" android:layout_marginRight="30dp" android:text="@string/login_button" android:layout_below="@+id/re_psd" />
    <TextView android:textColor="#cad2d3" android:id="@+id/printtest" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/login_copyright" android:layout_below="@+id/login_button" android:layout_centerHorizontal="true" />
</RelativeLayout>
