<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="#e4e4e4" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="#e4e4e4" android:layout_width="match_parent" android:layout_height="match_parent"
        <RelativeLayout android:id="@+id/re_head" android:background="#16a085" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2801">
            <ImageView android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/topButton" android:clickable="true" android:layout_width="UNKNOWN_DATA_0x3201" android:layout_height="match_parent" android:layout_marginRight="4dp" android:src="@mipmap/back_arrow" android:layout_centerVertical="true" android:onClick="onback" />
            <TextView android:textSize="21sp" android:textStyle="bold" android:textColor="#ffffff" android:id="@+id/topTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/orderdetail" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/re1" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xa001" android:layout_below="@+id/re_head">
            <TextView android:textStyle="bold" android:textColor="#111111" android:id="@+id/tv_paysuccess" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="40dp" android:text="@string/paysc" />
            <ImageView android:id="@+id/payType" android:layout_width="UNKNOWN_DATA_0x1e01" android:layout_height="UNKNOWN_DATA_0x1e01" android:layout_marginTop="30dp" android:layout_marginRight="20dp" android:src="@mipmap/iv_status" android:layout_alignParentRight="true" />
            <TextView android:textSize="30sp" android:textStyle="bold" android:textColor="#111111" android:id="@+id/tv_money" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70dp" android:text="￥0.1" android:layout_centerHorizontal="true" />
            <TextView android:id="@+id/tv_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginBottom="20dp" android:text="2014-3-2" android:layout_alignParentBottom="true" />
            <TextView android:id="@+id/tv_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20dp" android:layout_marginBottom="20dp" android:text="@string/getsc" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/re2" android:background="#ffffff" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xe601" android:layout_marginTop="20dp" android:layout_below="@+id/re1">
            <TextView android:textStyle="bold" android:textColor="#111111" android:id="@+id/order_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="15dp" android:text="@string/ordernumber" />
            <TextView android:id="@+id/tv_ordernum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="15dp" android:layout_toRightOf="@+id/order_num" />
            <TextView android:textStyle="bold" android:textColor="#111111" android:id="@+id/re2_tv_trade" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:text="@string/trade" android:layout_below="@+id/order_num" />
            <TextView android:id="@+id/re2_trade" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:singleLine="true" android:layout_toRightOf="@+id/re2_tv_trade" android:layout_below="@+id/order_num" />
            <TextView android:textStyle="bold" android:textColor="#111111" android:id="@+id/tv_refund" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="25dp" android:text="@string/refund" android:layout_below="@+id/re2_tv_trade" />
            <EditText android:id="@+id/et_refund" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:singleLine="true" android:layout_toRightOf="@+id/tv_refund" android:layout_below="@+id/re2_tv_trade" android:inputType="textCapWords|number|numberSigned|numberDecimal|numberPassword|phone" />
            <TextView android:textStyle="bold" android:textColor="#111111" android:id="@+id/tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="25dp" android:text="@string/tip" android:layout_below="@+id/et_refund" />
            <EditText android:id="@+id/beizhu" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:singleLine="true" android:layout_toRightOf="@+id/tv" android:layout_below="@+id/et_refund" />
            <TextView android:textStyle="bold" android:textColor="#111111" android:id="@+id/tv_pass" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="25dp" android:text="@string/login_password" android:layout_below="@+id/beizhu" />
            <EditText android:id="@+id/ed_pass" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:singleLine="true" android:layout_toRightOf="@+id/tv_pass" android:layout_below="@+id/beizhu" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/re3" android:background="#ffffff" android:visibility="gone" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xa001" android:layout_marginTop="20dp" android:layout_below="@+id/re2">
            <TextView android:textStyle="bold" android:textColor="#111111" android:id="@+id/re3_order_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:text="@string/ordernumber" />
            <TextView android:id="@+id/re3_tv_ordernum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:text="123" android:layout_toRightOf="@+id/re3_order_num" />
            <TextView android:textStyle="bold" android:textColor="#111111" android:id="@+id/re3_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="25dp" android:text="@string/trade" android:layout_below="@+id/re3_order_num" />
            <TextView android:id="@+id/tv_trade" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="25dp" android:text="123" android:singleLine="true" android:layout_toRightOf="@+id/re3_tv" android:layout_below="@+id/re3_order_num" />
            <TextView android:textStyle="bold" android:textColor="#111111" android:id="@+id/reason" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="25dp" android:text="@string/reason" android:layout_below="@+id/re3_tv" />
            <TextView android:textColor="#111111" android:id="@+id/tv_reason" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="25dp" android:layout_toRightOf="@+id/re3_tv" android:layout_below="@+id/re3_tv" />
        </RelativeLayout>
        <Button android:textSize="16sp" android:textColor="#ffffff" android:id="@+id/btn" android:background="@drawable/payback_back" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:text="@string/refund" android:layout_below="@+id/re2" />
        <Button android:textSize="16sp" android:textColor="#ffffff" android:id="@+id/btn_print" android:background="@drawable/payback_back" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:text="@string/print" android:layout_below="@+id/btn" />
        <Button android:textSize="16sp" android:textColor="#ffffff" android:id="@+id/btn_return" android:background="@drawable/payback_back" android:visibility="gone" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:text="@string/returnback" android:layout_below="@+id/btn_print" />
        <TextView android:textColor="#e4e4e4" android:id="@+id/text_print" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/btn_print" />
    </RelativeLayout>
</ScrollView>
